# flips

./: .env.template  .gitignore  README.md  build-and-prepare.sh  cleanup.sh  deploy.sh  diagnose-service.sh  fix-service-remote.sh  flips.service  generate-ssl-cert.sh  install.sh  manage-service.sh  setup-letsencrypt.sh  setup-service.sh
backend/: hash_password.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  backup.py  cards.py  stats.py  study.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: entities.py  user.py
backend/app/repositories/: cards.py  history.py  reverso.py  schedule.py  user.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/components/: CentralContainer.tsx  FloatingTranslateChat.tsx  IncreaseLimitsModal.tsx  ProtectedRoute.tsx  TranslateModal.tsx
frontend/src/pages/: AddPage.tsx  DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx  StatsPage.tsx  StudyPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: auth.ts  wordComparison.ts
